fixed the issue of potential overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,8 @@ largertitle {
     border-color: #000000;
     padding-top: .5em;
     padding-bottom: .5em;
+    display: block;
+    width: 100%; 
 }  
 
 a {
